--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -6,6 +6,12 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
+      - name: Checkout github repo (+ download lfs dependencies)
+        uses: actions/checkout@v2
+        with:
+          lfs: true
+      - name: Checkout LFS objects
+        run: git lfs checkout
       - name: Update
         run: sudo apt-get update
       - name: Install deps
