--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -35,14 +35,15 @@ jobs:
             -initrd /mnt/casper/initrd \
             -append 'console=ttyS0 earlyprintk=serial autoinstall ds=nocloud-net;s=http://_gateway:3003/'
       - name: Launch VM
+        working-directory: kernel/qemu
         run: |
-          cd kernel/qemu && sudo screen -d -m ./launch-qemu-AmdSevX64.old.sh \
+          sudo screen -d -m ./launch-qemu-AmdSevX64.old.sh \
             -oldfw \
             -mem 8192 \
             -default-network \
             -hda ../images/disk.qcow2
           sleep 30
-          until ssh -i services/dummy_ssh_key -p 8000 guest@localhost 'exit'; do sleep 5; done
+          until ssh -i ../../services/dummy_ssh_key -p 8000 guest@localhost 'exit'; do sleep 5; done
       - name: Run setup scripts
         run: |
           ssh -i services/dummy_ssh_key -p 8000 guest@localhost 'sudo dpkg -i *.deb'
@@ -52,8 +53,9 @@ jobs:
           scp -i services/dummy_ssh_key -P 8000 guest@localhost:/boot/initrd.img-6.5.0-rc2-snp-guest-ad9c0bf475ec kernel/images/
           ssh -i services/dummy_ssh_key -p 8000 guest@localhost 'sudo shutdown now'
       - name: Re-run VM with new kernel
+        working-directory: kernel/qemu
         run: |
-          cd kernel/qemu && sudo screen -d -m ./launch-qemu-AmdSevX64.old.sh \
+          sudo screen -d -m ./launch-qemu-AmdSevX64.old.sh \
             -mem 8192 \
             -default-network \
             -hda ../images/disk.qcow2 \
@@ -61,7 +63,7 @@ jobs:
             -initrd ../images/initrd.img-6.5.0-rc2-snp-guest-ad9c0bf475ec \
             -append 'console=ttyS0 earlyprintk=serial'
           sleep 30
-          until ssh -i services/dummy_ssh_key -p 8000 guest@localhost 'exit'; do sleep 5; done
+          until ssh -i ../../services/dummy_ssh_key -p 8000 guest@localhost 'exit'; do sleep 5; done
       - name: Copy services and run setup scripts
         run: |
           scp -i services/dummy_ssh_key -P 8000 services/setup.sh services/docker-runner.sh services/docker-runner.service  services/blyss-nvidia-persistenced.service services/ncr-config.toml guest@localhost:/home/guest/
